# Hermes

./: .env.example  .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: ci.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_create_cases.py  0002_case_capture_fields.py  0003_case_artifact_key.py  0004_case_analysis_fields.py  0005_case_phase_b_fields.py  0006_case_structured_pieces.py  0007_analysis_dossie.py  0008_case_parties.py  0009_fundamentos.py  0010_fundamento_conclusions.py  0011_tema_repetitivo.py
apps/api/src/hermes_api/: anonymizer.py  auth.py  cache.py  config.py  db.py  llm.py  main.py  storage.py
apps/api/src/hermes_api/models/: __init__.py  case.py  fundamento.py  tema_repetitivo.py
apps/api/src/hermes_api/routes/: bemtevi.py  cases.py  debug.py  fundamentos.py  health.py  ingest.py
apps/api/src/hermes_api/schemas/: case.py  fundamento.py  tema_repetitivo.py
apps/api/src/hermes_api/scripts/: refresh_repetitivos_now.py
apps/api/src/hermes_api/services/: analysis_packets.py  analysis_themed.py  anonymizer_llm.py  despacho.py  docx.py  extract.py  fundamentos.py  manifest.py  minuta_draft.py  parties_anonymizer.py  prepared.py  repetitivos_match.py  resource_check.py  text_extract.py  tokens.py  tst_repetitivos.py
apps/api/tests/: conftest.py  test_analysis_packets.py  test_analysis_themed.py  test_anonymizer.py  test_anonymizer_llm.py  test_bemtevi_proxy.py  test_cases.py  test_debug_anonymize.py  test_despacho.py  test_docx.py  test_fundamentos.py  test_health.py  test_ingest.py  test_llm.py  test_llm_cache.py  test_manifest.py  test_minuta_draft.py  test_parties_anonymizer.py  test_phase_b_pipeline.py  test_repetitivos_match.py  test_resource_check.py  test_structured_pieces.py  test_tst_repetitivos.py
apps/playwright/: Dockerfile  pyproject.toml
apps/playwright/scripts/: bootstrap_profile.py
apps/playwright/src/hermes_playwright/: capture.py  config.py  login_session.py  main.py
apps/playwright/tests/: test_capture.py  test_extract.py  test_health.py
apps/web/: Dockerfile  drizzle.config.ts  next.config.mjs  (+2 more)
apps/worker/: Dockerfile  pyproject.toml
apps/worker/src/hermes_worker/: celery_app.py
apps/worker/src/hermes_worker/tasks/: __init__.py  analyze.py  capture.py  docx.py  packets.py  refresh_repetitivos.py
apps/worker/tests/: test_analyze.py  test_capture.py  test_ping.py
docker/: docker-compose.yml
docs/: BEM-TE-VI-LOGIN.md  BOOKMARKLET.md  SMOKE-TEST.md
scripts/: com.hermes.playwright.plist.template  playwright-host.sh
(+75 files in other folders)
