[project]
name = "hermes-monorepo"
version = "0.1.0"
description = "Hermes — TST processo analysis webapp"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["apps/api", "apps/worker", "apps/playwright"]

[tool.uv.sources]
hermes-api = { workspace = true }
hermes-worker = { workspace = true }
hermes-playwright = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["apps/api/tests", "apps/worker/tests", "apps/playwright/tests"]
