[project]
name = "hermes-playwright"
version = "0.1.0"
description = "Hermes Bem-te-vi capture microservice"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "playwright>=1.49",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "httpx>=0.28",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hermes_playwright"]
